# myos

./: .gitignore  CMakeLists.txt  doc.conf.in
ceedling_files/: project.yml
src/: CMakeLists.txt  error.h  linker.ld
src/kernel/: boot.S  fiasco.c  fiasco.h  kernel.c  memmgr.c  memmgr.h  terminal.c  terminal.h
src/tests/: test_utils_bitmap.c  test_utils_string.c
src/utils/: bitmap.c  bitmap.h  mem.c  mem.h  string.c  string.h  utils.h
